Nombre del banco

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>Banco Segur — Tu futuro financiero</title>
+	<title>ActionBank — Tu futuro financiero</title>
 	<link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -11,13 +11,13 @@
 		<div class="container header-inner">
 			<a class="logo" href="#">
 				<!-- simple logo -->
-				<span class="logo-mark">BS</span>
-				<span class="logo-text"><span class="logo-black">Banco</span><span class="logo-purple">Segur</span></span>
+				<span class="logo-mark">AB</span>
+				<span class="logo-text"><span class="logo-black">Action</span><span class="logo-purple">Bank</span></span>
 			</a>
 			<nav class="main-nav" aria-label="Navegación principal">
 				<ul>
-					<li><a href="#productos">Productos</a></li>
-					<li><a href="#ventajas">Ventajas</a></li>
+					<li><a href="#productos">Nosotros</a></li>
+					<li><a href="#ventajas">Servicios</a></li>
 					<li><a href="#contacto">Contacto</a></li>
 				</ul>
 			</nav>
