Formulario de opciones

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</nav>
 			<div class="header-actions">
 				<a class="btn btn-outline" href="#">Ingresar</a>
-				<a class="btn btn-primary" href="#abrir-cuenta">Abrir cuenta</a>
+				<a class="btn btn-primary" href="#">Abrir cuenta</a>
 			</div>
 		</div>
 	</header>
@@ -40,7 +40,7 @@
 					<p class="hero-sub">Cuentas, tarjetas y asesoría diseñada para que crezcas con tranquilidad.</p>
 					<div class="hero-cta">
 						<a class="btn btn-primary large" href="#abrir-cuenta">Abrir cuenta</a>
-						<a class="btn btn-outline" href="#productos">Ver productos</a>
+						<a class="btn btn-outline" href="#productos">Ver servicios</a>
 					</div>
 				</div>
 				<div class="hero-media" aria-hidden="true">
@@ -49,7 +49,7 @@
 						<div class="chip"></div>
 						<div class="balance">
 							<span class="bal-label">Saldo</span>
-							<span class="bal-amount">€ 8,420.50</span>
+							<span class="bal-amount">$ 8,420.50</span>
 						</div>
 					</div>
 				</div>
