--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		</section>
 
 		<section id="ventajas" class="features container">
-			<h2 class="section-title"><span class="title-black">Por qué</span> <span class="title-purple">Banco Segur</span></h2>
+			<h2 class="section-title"><span class="title-black">Ventajas<span class="title-purple">ActionBank></h2>
 			<ul class="features-grid">
 				<li>
 					<h3 class="feature-title">Seguridad</h3>
@@ -83,7 +83,7 @@
 
 	<footer id="contacto" class="site-footer">
 		<div class="container footer-inner">
-			<p class="footer-copy"><span class="logo-black">Banco</span><span class="logo-purple">Segur</span> — © <span id="year"></span></p>
+			<p class="footer-copy"><span class="logo-black">Action<span class="logo-purple">Bank — © <span id="year"></span></p>
 			<nav class="footer-nav">
 				<a href="#">Términos</a>
 				<a href="#">Privacidad</a>
