Cambios y nuevas paginas

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 				<span class="hamburger" aria-hidden="true"></span>
 			</button>
 			<div class="header-actions">
-				<a class="btn btn-outline" href="#">Ingresar</a>
-				<a class="btn btn-primary" href="#">Abrir cuenta</a>
+				<a class="btn btn-outline" href="login.html">Ingresar</a>
+				<a class="btn btn-primary" href="signup.html">Abrir cuenta</a>
 			</div>
 		</div>
 	</header>
@@ -98,19 +98,6 @@
 		</div>
 	</footer>
 
-	<script>
-		// pequeño script para año dinámico
-		document.getElementById('year').textContent = new Date().getFullYear();
-		// toggler para navegación mobile
-		(function(){
-			const btn = document.querySelector('.nav-toggle');
-			const nav = document.getElementById('main-nav');
-			if(!btn || !nav) return;
-			btn.addEventListener('click', function(){
-				const open = nav.classList.toggle('open');
-				btn.setAttribute('aria-expanded', open ? 'true' : 'false');
-			});
-		})();
-	</script>
 </body>
+<script src="index.js"></script>
 </html>
