--- a/signup.html
+++ b/signup.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Iniciar sesión — ActionBank</title>
+  <title>Crear cuenta — ActionBank</title>
+  <!-- Reutiliza el CSS general -->
   <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="login.css" />
+  <!-- CSS específico -->
+  <link rel="stylesheet" href="signup.css" />
 </head>
 <body>
   <main>
-    <div class="login-card">
+    <div class="signup-card animate-fade">
       <a href="index.html" class="logo" style="text-decoration:none;">
         <span class="logo-mark">AB</span>
         <span class="logo-text">
@@ -17,30 +19,27 @@
         </span>
       </a>
 
-      <h2>Inicia sesión</h2>
-      <form id="loginForm">
+      <h2>Crea tu cuenta</h2>
+      <form id="signupForm">
         <div class="input-group">
           <label for="new-username">Usuario</label>
-          <input type="text" id="new-username" placeholder="Ingresa tu usuario" />
+          <input type="text" id="new-username" placeholder="Crea tu usuario" />
         </div>
 
         <div class="input-group">
           <label for="new-password">Contraseña</label>
-          <input type="password" id="new-password" placeholder="Ingresa tu contraseña" />
+          <input type="password" id="new-password" placeholder="Crea tu contraseña" />
         </div>
 
         <div class="button-group">
-          <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-          <button type="reset" class="btn btn-outline">Cancelar</button>
+          <button type="submit" class="btn btn-primary">Registrarse</button>
+          <a href="login.html" class="btn btn-outline">Ya tengo cuenta</a>
         </div>
-        <p id="error-message"></p>
+        <p id="signup-msg"></p>
       </form>
     </div>
   </main>
 
-  
+  <script src="signup.js"></script>
 </body>
-<script src="login.js"></script>
-  
-
 </html>
